Feature: Implemented sorter on m Table adding as a Dialog and created respective functions to load the fragment on current view and handlers to modify the table binding when sorting

--- a/webapp/manifest.json
+++ b/webapp/manifest.json
@@ -86,7 +86,10 @@
         "viewType": "XML",
         "path": "com.bootcamp.sapui5.finaltest.view",
         "async": true,
-        "viewPath": "com.bootcamp.sapui5.finaltest.view"
+        "viewPath": "com.bootcamp.sapui5.finaltest.view",
+        "files": [
+					"fragments.SortDialog.fragment.xml"
+				]
       },
       "routes": [
         {
